--- a/.github/fluxos de trabalho |/main.yml
+++ b/.github/fluxos de trabalho |/main.yml
@@ -1,8 +1,8 @@
 name: Generate Datas
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  push:
+    branches: [ '*' ]
   workflow_dispatch:
 
 jobs:
